# btc_wallet_gui

./: Cargo.toml  README.md  wallet_backup.enc
src/: app.rs  i18n.rs  main.rs  theme.rs
src/app/: login.rs  mod.rs  send.rs  settings.rs  wallet.rs
src/storage/: encryption.rs  legacy.rs  mod.rs  paths.rs
src/utils/: mod.rs
src/views/: dashboard.rs  history.rs  login.rs  mod.rs  receive.rs  send.rs  settings.rs  sidebar.rs  wallets.rs
src/wallet/: address.rs  history.rs  mod.rs  tx.rs
