[package]
name = "btc_wallet_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio", "advanced", "image"] }
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
bip39 = { version = "2.1", features = ["rand", "serde"] }
bitcoin = { version = "0.32", features = ["serde"] }
chacha20poly1305 = "0.10"
directories = "5.0"
getrandom = "0.3"
hex = "0.4"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[profile.release]
codegen-units = 1
lto = "fat"
strip = true
panic = 'abort'
